--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 web:
   image: nginx
   volumes:
-   - nginx.conf:/etc/nginx/nginx.conf
-   - default.d:/etc/nginx/default.d
-   - conf.d:/etc/nginx/conf.d
-   - pelican-output:/usr/share/nginx/html
-   - /etc/pki/nginx:/etc/pki/nginx
+   - ./nginx.conf:/etc/nginx/nginx.conf
+   - ./default.d:/etc/nginx/default.d
+   - ./conf.d:/etc/nginx/conf.d
+   - ./pelican-output:/usr/share/nginx/html
+   - /etc/pki/nginx:/etc/pki/nginx:ro
   ports:
    - "80:80"
   command: [nginx, '-g', 'daemon off;']
